--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c  #1
 osx_image: xcode9.0 #2
 xcode_project: NewCandySearch.xcodeproj #3
 xcode_scheme: NewCandySearch #4
-xcode_sdk: iphonesimulator10.3 #5
+xcode_sdk: iphonesimulator #5
