--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c  #1
-osx_image: xcode9.0 #2
-xcode_project: NewCandySearch.xcodeproj #3
-xcode_scheme: NewCandySearch #4
-xcode_sdk: iphonesimulator #5
+#osx_image: xcode9.0 #2#
+#xcode_project: NewCandySearch.xcodeproj #3
+#xcode_scheme: NewCandySearch #4
+#xcode_sdk: iphonesimulator #5
