--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ language: objective-c  #1
 #xcode_project: NewCandySearch.xcodeproj #3
 #xcode_scheme: NewCandySearch #4
 #xcode_sdk: iphonesimulator #5
+script:
+  - xctool -xcode_project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
