--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ language: objective-c  #1
 #xcode_scheme: NewCandySearch #4
 #xcode_sdk: iphonesimulator #5
 script:
-  - xctool -xcode_project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+  - xctool -project NewCandySearch.xcodeproj -target NewCandySearch -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
