--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
-language: objective-c  #1
-#osx_image: xcode9.0 #2#
-#xcode_project: NewCandySearch.xcodeproj #3
-#xcode_scheme: NewCandySearch #4
-#xcode_sdk: iphonesimulator #5
+#language: objective-c  #1
+##osx_image: xcode9.0 #2#
+##xcode_project: NewCandySearch.xcodeproj #3
+##xcode_scheme: NewCandySearch #4
+##xcode_sdk: iphonesimulator #5
+#script:
+ # - xctool -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+
+osx_image: xcode9.0
+language: objective-c
 script:
-  - xctool -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+- ./scripts/ci-script.bash
