--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@
 #script:
  # - xctool -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 
-osx_image: xcode9.0
+osx_image: xcode9
+xcode_sdk: iOS 11.0
 language: objective-c
-script:
-- ./scripts/ci-script.bash
+xcode_project: NewCandySearch.xcodeproj
+xcode_scheme: NewCandySearch
