--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@
  # - xctool -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 
 osx_image: xcode9
-xcode_sdk: iOS 11.0
+xcode_sdk: iphonesimulator11.0
 language: objective-c
 xcode_project: NewCandySearch.xcodeproj
 xcode_scheme: NewCandySearch
