--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ language: objective-c
 xcode_project: NewCandySearch.xcodeproj
 xcode_scheme: NewCandySearch
 script:
-    - xcodebuild clean build -sdk iphonesimulator -project NewCandySearch.xcodeproj -scheme NewCandySearch CODE_SIGNING_REQUIRED=NO
+    - xcodebuild clean build CODE_SIGNING_REQUIRED=NO
