--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
-#language: objective-c  #1
-##osx_image: xcode9.0 #2#
-##xcode_project: NewCandySearch.xcodeproj #3
-##xcode_scheme: NewCandySearch #4
-##xcode_sdk: iphonesimulator #5
-#script:
- # - xctool -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 
 osx_image: xcode9
 xcode_sdk: iphonesimulator11.0
 language: objective-c
 xcode_project: NewCandySearch.xcodeproj
 xcode_scheme: NewCandySearch
+#script:
+#    - xcodebuild clean build -sdk iphonesimulator11.0 -project NewCandySearch.xcodeproj -scheme NewCandySearch CODE_SIGNING_REQUIRED=NO
+    
 script:
-    - xcodebuild clean build -sdk iphonesimulator11.0 -project NewCandySearch.xcodeproj -scheme NewCandySearch CODE_SIGNING_REQUIRED=NO
+    - xcodebuild clean build -sdk iphonesimulator11.0 -workspace NewCandySearch.xcworkspace -scheme NewCandySearch CODE_SIGNING_REQUIRED=NO
