--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
 - ./scripts/add-key.sh
 - ./scripts/update-bundle.sh
 script:
-- xctool -workspace NewCandySearch.xcworkspace -scheme NewCandySearch -sdk iphoneos
+- xcodebuild clean build -workspace NewCandySearch.xcworkspace -scheme NewCandySearch -sdk iphoneos
   -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO
 after_script:
 - ./scripts/remove-key.sh
