--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ before_script:
 - ./scripts/add-key.sh
 - ./scripts/update-bundle.sh
 
-
 script:
-- xcodebuild clean build -workspace NewCandySearch.xcworkspace -scheme NewCandySearch -sdk iphoneos
+- xcodebuild clean build -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphoneos
   -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO
 after_script:
 - ./scripts/remove-key.sh
