--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 osx_image: xcode9
-xcode_sdk: iphonesimulator11.0
+#xcode_sdk: iphonesimulator11.0
 language: objective-c
 xcode_project: NewCandySearch.xcodeproj
 xcode_scheme: NewCandySearch
@@ -9,7 +9,7 @@ before_script:
 
 script:
 - xcodebuild clean build -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphoneos
-  -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO
+  -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO - travis_wait 30 pip install scipy
 after_script:
 - ./scripts/remove-key.sh
 env:
