--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ xcode_scheme: NewCandySearch
 before_script:
 - ./scripts/add-key.sh
 - ./scripts/update-bundle.sh
-
 script:
-- xcodebuild clean build -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphoneos
-  -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO - travis_wait 30 pip install scipy
+- xcodebuild clean build -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphoneos -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO
 after_script:
 - ./scripts/remove-key.sh
 env:
