--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ xcode_scheme: NewCandySearch
 before_script:
 - ./scripts/add-key.sh
 - ./scripts/update-bundle.sh
+- ./scripts/sign-and-upload.sh
 script:
 - xcodebuild clean build -project NewCandySearch.xcodeproj -scheme NewCandySearch -sdk iphoneos -configuration Release OBJROOT=$PWD/build SYMROOT=$PWD/build ONLY_ACTIVE_ARCH=NO
 after_script:
